history/plantiSMASH-1826405.out
  File "/bigdata/littlab/arajewski/Datura/software/plantismash-1.0/run_antismash.py", line 90
    print "\nInput error:", e, "\n"
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("\nInput error:", e, "\n")?
